--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL = mongodb+srv://onlyfordevio:bVv8P0q3GXc5GTV7@survey-cluster.dtsk9rr.mongodb.net/surveydb?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://username:<password>@survey-cluster.dtsk9rr.mongodb.net/?retryWrites=true&w=majority
