Added loading state

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL = mongodb+srv://username:<password>@survey-cluster.dtsk9rr.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://onlyfordevio:<password>@survey-cluster.dtsk9rr.mongodb.net/?retryWrites=true&w=majority
